feat: add export feature and sync to google-sheet
